fix player spacing

--- a/static-prototype/assets/sass/util/_util.sass
+++ b/static-prototype/assets/sass/util/_util.sass
@@ -89,9 +89,6 @@
 .mt-3
   margin-top: 3rem
 
-.mt-5
-  margin-top: 5rem
-
 .mt-10
   margin-top: 10rem
 
@@ -103,6 +100,9 @@
 
 .mb-3
   margin-bottom: 3rem
+
+.mb-5
+  margin-bottom: 5rem
 
 .ml-2
   margin-left: 2rem
